Changed API methods
