# swagger_server/models/__init__.py
@@ -3,7 +3,11 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from swagger_server.models.apiv1historyobject_typehistory_dataidids_measurements import Apiv1historyobjectTypehistoryDataididsMeasurements
+from swagger_server.models.apiv1historyhistory_dataidids_measurements import Apiv1historyhistoryDataididsMeasurements
 from swagger_server.models.inline_response200 import InlineResponse200
 from swagger_server.models.inline_response2001 import InlineResponse2001
 from swagger_server.models.inline_response2002 import InlineResponse2002
+from swagger_server.models.inline_response2003 import InlineResponse2003
+from swagger_server.models.inline_response2004 import InlineResponse2004
+from swagger_server.models.scheduler_create_body import SchedulerCreateBody
+from swagger_server.models.scheduler_update_body import SchedulerUpdateBody
