# swagger_server/models/apiv1historyobject_typehistory_dataidids_measurements.py
@@ -1,88 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class Apiv1historyobjectTypehistoryDataididsMeasurements(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-    def __init__(self, _date: str=None, subs: int=None):  # noqa: E501
-        """Apiv1historyobjectTypehistoryDataididsMeasurements - a model defined in Swagger
-
-        :param _date: The _date of this Apiv1historyobjectTypehistoryDataididsMeasurements.  # noqa: E501
-        :type _date: str
-        :param subs: The subs of this Apiv1historyobjectTypehistoryDataididsMeasurements.  # noqa: E501
-        :type subs: int
-        """
-        self.swagger_types = {
-            '_date': str,
-            'subs': int
-        }
-
-        self.attribute_map = {
-            '_date': 'date',
-            'subs': 'subs'
-        }
-        self.__date = _date
-        self._subs = subs
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'Apiv1historyobjectTypehistoryDataididsMeasurements':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The apiv1historyobject_typehistory_dataidids_measurements of this Apiv1historyobjectTypehistoryDataididsMeasurements.  # noqa: E501
-        :rtype: Apiv1historyobjectTypehistoryDataididsMeasurements
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def _date(self) -> str:
-        """Gets the _date of this Apiv1historyobjectTypehistoryDataididsMeasurements.
-
-
-        :return: The _date of this Apiv1historyobjectTypehistoryDataididsMeasurements.
-        :rtype: str
-        """
-        return self.__date
-
-    @_date.setter
-    def _date(self, _date: str):
-        """Sets the _date of this Apiv1historyobjectTypehistoryDataididsMeasurements.
-
-
-        :param _date: The _date of this Apiv1historyobjectTypehistoryDataididsMeasurements.
-        :type _date: str
-        """
-
-        self.__date = _date
-
-    @property
-    def subs(self) -> int:
-        """Gets the subs of this Apiv1historyobjectTypehistoryDataididsMeasurements.
-
-
-        :return: The subs of this Apiv1historyobjectTypehistoryDataididsMeasurements.
-        :rtype: int
-        """
-        return self._subs
-
-    @subs.setter
-    def subs(self, subs: int):
-        """Sets the subs of this Apiv1historyobjectTypehistoryDataididsMeasurements.
-
-
-        :param subs: The subs of this Apiv1historyobjectTypehistoryDataididsMeasurements.
-        :type subs: int
-        """
-
-        self._subs = subs
