# swagger_server/models/scheduler_create_body.py
@@ -1,0 +1,116 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class SchedulerCreateBody(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, action: str=None, time_repeat: int=None, name: str=None):  # noqa: E501
+        """SchedulerCreateBody - a model defined in Swagger
+
+        :param action: The action of this SchedulerCreateBody.  # noqa: E501
+        :type action: str
+        :param time_repeat: The time_repeat of this SchedulerCreateBody.  # noqa: E501
+        :type time_repeat: int
+        :param name: The name of this SchedulerCreateBody.  # noqa: E501
+        :type name: str
+        """
+        self.swagger_types = {
+            'action': str,
+            'time_repeat': int,
+            'name': str
+        }
+
+        self.attribute_map = {
+            'action': 'action',
+            'time_repeat': 'time_repeat',
+            'name': 'name'
+        }
+        self._action = action
+        self._time_repeat = time_repeat
+        self._name = name
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'SchedulerCreateBody':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The scheduler_create_body of this SchedulerCreateBody.  # noqa: E501
+        :rtype: SchedulerCreateBody
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def action(self) -> str:
+        """Gets the action of this SchedulerCreateBody.
+
+
+        :return: The action of this SchedulerCreateBody.
+        :rtype: str
+        """
+        return self._action
+
+    @action.setter
+    def action(self, action: str):
+        """Sets the action of this SchedulerCreateBody.
+
+
+        :param action: The action of this SchedulerCreateBody.
+        :type action: str
+        """
+
+        self._action = action
+
+    @property
+    def time_repeat(self) -> int:
+        """Gets the time_repeat of this SchedulerCreateBody.
+
+        time in minutes  # noqa: E501
+
+        :return: The time_repeat of this SchedulerCreateBody.
+        :rtype: int
+        """
+        return self._time_repeat
+
+    @time_repeat.setter
+    def time_repeat(self, time_repeat: int):
+        """Sets the time_repeat of this SchedulerCreateBody.
+
+        time in minutes  # noqa: E501
+
+        :param time_repeat: The time_repeat of this SchedulerCreateBody.
+        :type time_repeat: int
+        """
+
+        self._time_repeat = time_repeat
+
+    @property
+    def name(self) -> str:
+        """Gets the name of this SchedulerCreateBody.
+
+
+        :return: The name of this SchedulerCreateBody.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name: str):
+        """Sets the name of this SchedulerCreateBody.
+
+
+        :param name: The name of this SchedulerCreateBody.
+        :type name: str
+        """
+
+        self._name = name
