# swagger_server/models/scheduler_update_body.py
@@ -1,0 +1,142 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class SchedulerUpdateBody(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, scheduler_id: int=None, action: str=None, time_repeat: int=None, name: str=None):  # noqa: E501
+        """SchedulerUpdateBody - a model defined in Swagger
+
+        :param scheduler_id: The scheduler_id of this SchedulerUpdateBody.  # noqa: E501
+        :type scheduler_id: int
+        :param action: The action of this SchedulerUpdateBody.  # noqa: E501
+        :type action: str
+        :param time_repeat: The time_repeat of this SchedulerUpdateBody.  # noqa: E501
+        :type time_repeat: int
+        :param name: The name of this SchedulerUpdateBody.  # noqa: E501
+        :type name: str
+        """
+        self.swagger_types = {
+            'scheduler_id': int,
+            'action': str,
+            'time_repeat': int,
+            'name': str
+        }
+
+        self.attribute_map = {
+            'scheduler_id': 'scheduler_id',
+            'action': 'action',
+            'time_repeat': 'time_repeat',
+            'name': 'name'
+        }
+        self._scheduler_id = scheduler_id
+        self._action = action
+        self._time_repeat = time_repeat
+        self._name = name
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'SchedulerUpdateBody':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The scheduler_update_body of this SchedulerUpdateBody.  # noqa: E501
+        :rtype: SchedulerUpdateBody
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def scheduler_id(self) -> int:
+        """Gets the scheduler_id of this SchedulerUpdateBody.
+
+
+        :return: The scheduler_id of this SchedulerUpdateBody.
+        :rtype: int
+        """
+        return self._scheduler_id
+
+    @scheduler_id.setter
+    def scheduler_id(self, scheduler_id: int):
+        """Sets the scheduler_id of this SchedulerUpdateBody.
+
+
+        :param scheduler_id: The scheduler_id of this SchedulerUpdateBody.
+        :type scheduler_id: int
+        """
+
+        self._scheduler_id = scheduler_id
+
+    @property
+    def action(self) -> str:
+        """Gets the action of this SchedulerUpdateBody.
+
+
+        :return: The action of this SchedulerUpdateBody.
+        :rtype: str
+        """
+        return self._action
+
+    @action.setter
+    def action(self, action: str):
+        """Sets the action of this SchedulerUpdateBody.
+
+
+        :param action: The action of this SchedulerUpdateBody.
+        :type action: str
+        """
+
+        self._action = action
+
+    @property
+    def time_repeat(self) -> int:
+        """Gets the time_repeat of this SchedulerUpdateBody.
+
+        time in minutes  # noqa: E501
+
+        :return: The time_repeat of this SchedulerUpdateBody.
+        :rtype: int
+        """
+        return self._time_repeat
+
+    @time_repeat.setter
+    def time_repeat(self, time_repeat: int):
+        """Sets the time_repeat of this SchedulerUpdateBody.
+
+        time in minutes  # noqa: E501
+
+        :param time_repeat: The time_repeat of this SchedulerUpdateBody.
+        :type time_repeat: int
+        """
+
+        self._time_repeat = time_repeat
+
+    @property
+    def name(self) -> str:
+        """Gets the name of this SchedulerUpdateBody.
+
+
+        :return: The name of this SchedulerUpdateBody.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name: str):
+        """Sets the name of this SchedulerUpdateBody.
+
+
+        :param name: The name of this SchedulerUpdateBody.
+        :type name: str
+        """
+
+        self._name = name
